# https://setuptools.pypa.io/

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "migasfree_client"
dynamic = ["version", "entry-points"]
authors = [
  {name = "Jose Antonio Chavarría", email = "jachavar@gmail.com"},
]
maintainers = [
  {name = "Jose Antonio Chavarría", email = "jachavar@gmail.com"},
]
license = { text = "GPLv3" }
description = "Synchronizes a computer from a migasfree server"
readme = "README.md"
keywords = ["migasfree", "systems management", "devops"]
requires-python = ">=3.6"
dependencies = [
    "netifaces>=0.8",
    "jwcrypto>=0.5.0",
    "requests>=2.4.3",
    "requests-toolbelt>=0.5.0",
    "rich>=9.5",
    "python-magic; sys_platform != 'win32'",
    "python-magic-bin; sys_platform == 'win32'",
    "psutil; sys_platform == 'win32'",
    "pywin32; sys_platform == 'win32'",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Programming Language :: Python",
    "Topic :: System :: Software Distribution",
]

[project.urls]
homepage = "https://migasfree.org"
repository = "https://github.com/migasfree/migasfree-client"
documentation = "https://fun-with-migasfree.readthedocs.io"
"Bug Report" = "https://github.com/migasfree/migasfree-client/issues"

[project.scripts]
migasfree = "migasfree_client.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
  "migasfree_client", "migasfree_client.devices", "migasfree_client.pms",
  "migasfree_client.devices.plugins", "migasfree_client.pms.plugins"
]

[tool.setuptools.dynamic]
version = {attr = "migasfree_client.__version__"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "responses>=0.23.0",
    "freezegun>=1.2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=migasfree_client",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--verbose"
]

[tool.ruff]
line-length = 120
target-version = "py37"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = ["E501"]  # line too long (handled by formatter)

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
